<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/action_rectangle" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_circle" android:title="@string/action_circle"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_oval" android:title="@string/action_oval"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_line" android:title="@string/action_line"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_text" android:title="@string/action_text"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_fill" android:title="@string/action_fill"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_add_frame" android:title="@string/action_add_frame"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
