<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    tools:context=".MainActivity"
    android:id="@+id/parentLayout"
    >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/borderImageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY" />

        <com.ranosys.andropaint.view.DrawingView
            android:id="@+id/drawing"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="#FFFFFFFF" />

    </FrameLayout>

    <ImageView
        android:id="@+id/eraserImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:src="@drawable/eraser"/>

    <LinearLayout
        android:id="@+id/first_drawer"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:animateLayoutChanges="true"
        >

        <LinearLayout
            android:id="@+id/menu_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/new_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/new_pic" />

            <ImageButton
                android:id="@+id/change_canvas_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/icon_canvas" />

            <ImageButton
                android:id="@+id/draw_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/brush" />

            <ImageButton
                android:id="@+id/erase_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/erase"
                android:src="@drawable/eraser" />

            <ImageButton
                android:id="@+id/fill_boundary"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/fill" />

            <ImageButton
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/save" />
        </LinearLayout>

        <ImageView
            android:id="@+id/open_menu_button"
            android:layout_width="34dp"
            android:layout_height="50dp"
            android:contentDescription="Open Tools"
            android:src="@drawable/menu" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/second_drawer"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/first_drawer"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"

        android:gravity="center">

        <LinearLayout
            android:id="@+id/shape_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/start_new"
                android:src="@drawable/line" />

            <ImageButton
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/brush"
                android:src="@drawable/rectangle" />

            <ImageButton
                android:id="@+id/circle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/erase"
                android:src="@drawable/circle" />

            <ImageButton
                android:id="@+id/oval"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/oval" />

            <ImageButton
                android:id="@+id/frame"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/save"
                android:src="@drawable/frame" />

        </LinearLayout>

        <ImageView
            android:id="@+id/open_shape_button"
            android:layout_width="34dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/shape_drawer"
            android:contentDescription="Open Tools"
            android:src="@drawable/shapes" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/second_drawer"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/paint_color_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/paint_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF660000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF660000" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF0000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF0000" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6600"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6600" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFCC00"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFFCC00" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009900"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF009900" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF009999"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF009999" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF0000FF"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF0000FF" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF990099"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF990099" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFF6666"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFF6666" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FFFFFFFF"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FFFFFFFF" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF787878"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF787878" />

                <ImageButton
                    android:layout_width="@dimen/large_brush"
                    android:layout_height="@dimen/large_brush"
                    android:layout_margin="2dp"
                    android:background="#FF000000"
                    android:contentDescription="@string/paint"
                    android:onClick="paintClicked"
                    android:src="@drawable/paint"
                    android:tag="#FF000000" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/open_color_button"
            android:layout_width="34dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/paint_color_drawer"
            android:contentDescription="Open Tools"
            android:src="@drawable/change_color" />

    </LinearLayout>


</RelativeLayout>
